# logica/objetivo_carrera.py
from enum import Enum

class ObjetivoCarrera(Enum):
    CALIDAD = "Verificación, validación y aseguramiento de la calidad del Software"
    PROYECTOS = "Administración de proyectos de Software"
    INVESTIGACION = "Investigación aplicada en proyectos de conceptualización, desarrollo, innovación y transferencia de Software"
    SISTEMAS = "Ingeniería de Software para el desarrollo de Sistemas de Información y Sistemas Inteligentes"
    EMPRENDIMIENTO = "Emprendimiento de empresas de investigación, innovación, desarrollo y comercialización de Software"